# CTemplate

./: .gitignore  CMakeLists.txt  Makefile  README.md  ctemp.bat  ctemp.sh  main.c  pseudo.code
configs/: sdl2.conf  sdl2_ge_00.conf  sdl2_image.conf
src/: config.h  ctemp.c  ctemp.h  main.c
src/commands/: commands.h  help.c  lib.c  main.c  type.c  version.c
src/ctemp/: ctemp.h  error.c  error.h  main.c  parse.c  types.h
src/defines/: base.h  ctemp.h  error.h
src/system/: sys.c  system.h
src/system/linux/: sys.c
src/system/windows/: sys.c
